--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <div class="contact-btn">Contact us</div>
         </div>  
         
-   
-        <div class="content">
+   <section class="body-section">
+        <div class="body-details">
             <div class="content-info">
                 <h3>We help to</h3>
                 <h1>Solve Clients</h1>
@@ -44,15 +44,11 @@
                         <i class="fa-solid fa-play"></i>
                     </div>
                 </div>
-            </div>
-
-
-            <div class="picture">
-                <img src="img/pic0.png">
+                 <img src="img/pic0.png">
             </div>
         </div>
 </div>
-
+</section>
 
         <!--------------------About section--------------------------->
         <section>
@@ -63,18 +59,20 @@
                     <h1>With There Marketing</h1>
                 </div>
 
-                <div class="slider-part">
-                    <ul>
-                        <li><i class="fa-solid fa-chevron-left"></i></li>
-                        <li><img src="img/sl1.png"></li>
-                        <li><img src="img/sl2.png"></li>
-                        <li><img src="img/sl3.png"></li>
-                        <li><img src="img/sl4.png"></li>
-                        <li><img src="img/sl5.png"></li>
-                        <li><i class="fa-solid fa-chevron-right"></i></li>
-                    </ul>
-                </div>
-
+                <div class="wrapper">
+            <i class="fa-solid fa-angle-left"></i>
+            <div class="carousel">
+                <img src="img/sl1.png">
+                <img src="img/sl2.png">
+                <img src="img/sl3.png">
+                <img src="img/sl4.png">
+                <img src="img/sl5.png">
+                <img src="img/sl1.png">
+                <img src="img/sl2.png">
+                <img src="img/sl3.png">
+            </div>
+            <i class="fa-solid fa-angle-right"></i>
+        </div>
                 <div class="about-info">
                     <div class="about-pic">
                         <img src="img/pic1.png">
@@ -139,7 +137,7 @@
             <div class="box-container">
                 <div class="box">
                     <div class="services-details">
-                        <i class="fa-solid fa-link"></i>
+                        <img src="img/icon1.png">
                         <div class="services-info">
                             <h5>Link Building</h5>
                             <p>We'll earn white hat backlinks and send qualified traffic to your business through guest posting</p>
@@ -148,7 +146,7 @@
                 </div>
                 <div class="box">
                     <div class="services-details">
-                        <i class="fa-solid fa-link"></i>
+                        <img src="img/icon2.png">
                         <div class="services-info">
                             <h5>SEO Services</h5>
                             <p>From content creation to consulting and keyword research, we can help you outrank your competition.</p>
@@ -157,7 +155,7 @@
                 </div>
                 <div class="box">
                     <div class="services-details">
-                        <i class="fa-solid fa-link"></i>
+                        <img src="img/icon3.png">
                         <div class="services-info">
                             <h5>Web Design & Development</h5>
                             <p>We make websites that don't just look great, but are also optimized for UX, conversions, and search engine visibility.
@@ -167,7 +165,7 @@
                 </div>
                 <div class="box">
                     <div class="services-details">
-                        <i class="fa-solid fa-link"></i>
+                        <img src="img/icon4.png">
                         <div class="services-info">
                             <h5>Done-For-You-Marketing</h5>
                             <p>Outsource all your marketing needs to a dedicated marketing team handpicked just for your business.</p>
@@ -345,7 +343,14 @@
                     <li><i class="fa-brands fa-instagram"></i></li>
                     <li><i class="fa-brands fa-youtube"></i></li>
                 </ul>
+                
+                <div class="copy-right">
+                    &#169; 2020 - All Right Reserved
+                </div>
             </div>
-           </footer>    
+           </footer>   
+
+
+           <script type="text/javascript" src="js/script.js"></script> 
 </body>
 </html>
